--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="video-caption">↓ Assista Aqui ↓</div>
             <div class="video-subcaption">Dublado/Áudio Editado (Com Legendas)</div>
     
-    <iframe src="https://fast.wistia.net/embed/iframe/zmxv480pfo?web_component=true&seo=true" style="height:45vh;left:0;position:center;top:0;width:78vh;border: 4px solid rgb(255, 95, 172);border-radius: 10px;"></iframe>
+    <iframe class="videoao" src="https://fast.wistia.net/embed/iframe/zmxv480pfo?web_component=true&seo=true" style="height:45vh;left:0;position:center;top:0;width:78vh;border: 4px solid rgb(255, 95, 172);border-radius: 10px;"></iframe>
 
     <br>
     <a href="https://streamtape.com/v/rb2eDxx3aXUbW3G/Wicked.OFilme.1080p.60fp.HD.Dub.Leg.mp4"
