--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
     <div>
         <div class="video-container">
-            <div class="video-caption">Recomenda-se virar a tela para uma melhor experiência no site!</div>
+            <div class="video-caption"><u>Recomenda-se virar a tela para uma melhor experiência no site!</u></div>
             <div class="video-caption">↓ Assista Aqui ↓</div>
             <div class="video-subcaption">Dublado/Áudio Editado (Com Legendas)</div>
     
