--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="container">
 
         <a href="https://streamtape.com/get_video?id=rb2eDxx3aXUbW3G&expires=1749081998&ip=F0qOKRSOES9XKxR&token=hlXRlNF2Z3EU&dl=1"
-        class="botao"
+        class="botao" style="display:none"
         target="_blank">streamtape</a>
         <a href="https://www.mediafire.com/file/vagtltd5tdwxkhs/Wicked.OFilme.1080p.60fp.HD.Dub.Leg.download.zip/file"
         class="botao"
