--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="download-links">
       <a href="https://streamtape.com/get_video?id=rb2eDxx3aXUbW3G&expires=1749081998&ip=F0qOKRSOES9XKxR&token=hlXRlNF2Z3EU&dl=1" class="botao" style="display:none" target="_blank">streamtape</a>
-      <a href="https://www.mediafire.com/file/vagtltd5tdwxkhs/Wicked.OFilme.1080p.60fp.HD.Dub.Leg.download.zip/file" class="botao" target="_blank">MediaFire</a>
+      <a href="https://u.pcloud.link/publink/show?code=XZcrjj5ZnS8CFpdS9eQ65tUUWaWb37WsvP3k" class="botao" target="_blank">pCloud</a>
       <a href="https://drive.google.com/file/d/1HW2dfRUimCYfk6pUQlBCIG7QERuo1E2J/view?usp=sharing" class="botao" target="_blank">GDrive</a>
     </div>
 
